--- a/anemone_coffee/src/components/ImageCarre.scss
+++ b/anemone_coffee/src/components/ImageCarre.scss
@@ -6,6 +6,10 @@
   padding-left:20px;
   padding-bottom:30px;
   
+  @media screen and (min-width: 768px) {
+    padding-right:70px;
+    padding-left:70px;
+  }
 
   .image-row {
     display: flex;
@@ -35,7 +39,7 @@
       color:rgb(0, 0, 0);
     }
 
-    @media screen and (max-width: 768px) {
+    @media screen and (max-width: 1023px) {
       .title_left, .title_right {
         display: none;
       }
@@ -43,7 +47,7 @@
   }
 
   /* Mobile styles */
-  @media screen and (max-width: 768px) {
+  @media screen and (max-width: 1023px) {
     .section {
       flex-direction: column; 
       
@@ -66,12 +70,13 @@
   }
 
   /* Desktop et tablette */
-  @media screen and (min-width: 768px) {
+  @media screen and (min-width: 1024px) {
     
       display: flex;
-      justify-content: center;
+      justify-content: space-between;
       flex-direction: row;
-      align-items: center;    
+      align-items: center;  
+      padding:60px;  
 
     /* Grille des images 2x2 */
     .section-row {
@@ -79,6 +84,7 @@
       flex-wrap: wrap; /* Les images se répartissent en deux lignes */
       justify-content: space-between;
       width: 50%; 
+      padding:20px;
 
     }
 
@@ -104,7 +110,9 @@
     /* Texte à gauche ou à droite en fonction de isTextOnRight */
     .text-section-left, .text-section-right {
       width: 35%;
+      padding:20px;
     }
+
 
     
   }
