--- a/anemone_coffee/src/components/header/NavBar.scss
+++ b/anemone_coffee/src/components/header/NavBar.scss
@@ -165,6 +165,25 @@ nav {
             text-transform: uppercase;
             font-weight: 600;
           }
+
+          .dropdown-menu {
+            position: absolute;
+            background: white;
+            border: 1px solid #ccc;
+            border-radius: 10px;
+            list-style: none;
+            padding: 10px;
+            min-width: 200px;
+            box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.2);
+            display: flex;
+            flex-direction: column;
+            gap: 5px;
+
+            a {
+                color:black;
+                text-align:left;
+            }
+          }
   
           a {
             color: rgb(255, 255, 255);
