--- a/anemone_coffee/src/components/header/NavBar.scss
+++ b/anemone_coffee/src/components/header/NavBar.scss
@@ -5,9 +5,27 @@ nav {
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center center;
-    height: 700px;
+    height:500px;
     overflow: hidden;
+    @media only screen and (min-width: 1024px) {
+      height: 700px;
+    }
+    .dropdown-menu {
+      border: 1px solid #ccc;
+      border-radius: 10px;
+      list-style: none;
+      padding: 10px;
+      min-width:250px;
+      box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.2);
+      display: flex;
+      flex-direction: column;
+      gap: 5px;
 
+      a {
+          color:black;
+          text-align:left;
+      }
+    }
     .navbar_container {
         color:white;
         padding-top:50px;
@@ -229,3 +247,4 @@ nav {
         height: 100%; /* Évite tout décalage vertical */
      }
      
+    
