--- a/anemone_coffee/src/components/ImageCarre.scss
+++ b/anemone_coffee/src/components/ImageCarre.scss
@@ -37,6 +37,7 @@
     
     button{
       color:rgb(0, 0, 0);
+      border: 1px solid black;
     }
 
     @media screen and (max-width: 1023px) {
