--- a/anemone_coffee/src/components/Sections.scss
+++ b/anemone_coffee/src/components/Sections.scss
@@ -39,6 +39,7 @@
     button {
       color: black;
       border: 1px solid black;
+      margin-bottom:30px;
     }
 
     /* Logos des réseaux sociaux */
