--- a/anemone_coffee/src/components/header/NavBar.scss
+++ b/anemone_coffee/src/components/header/NavBar.scss
@@ -39,6 +39,7 @@ nav {
   
       .reservation-btn {
         color:black;
+        padding:10px;
       }
       .navbar_logo {
         width: 80px; /* Taille du logo */
@@ -114,19 +115,19 @@ nav {
             transform: translateY(20px); /* Légèrement en bas */
             animation: fadeInSlide 0.5s ease forwards; /* Animation personnalisée */
             
-    /* Délais progressifs pour chaque élément */
-    &:nth-child(1) {
-      animation-delay: 0.2s;
-    }
-    &:nth-child(2) {
-      animation-delay: 0.4s;
-    }
-    &:nth-child(3) {
-      animation-delay: 0.6s;
-    }
-    &:nth-child(4) {
-      animation-delay: 0.8s;
-    }  }
+          /* Délais progressifs pour chaque élément */
+          &:nth-child(1) {
+            animation-delay: 0.2s;
+          }
+          &:nth-child(2) {
+            animation-delay: 0.4s;
+          }
+          &:nth-child(3) {
+            animation-delay: 0.6s;
+          }
+          &:nth-child(4) {
+            animation-delay: 0.8s;
+          }  }
   
           a {
             color: rgb(255, 255, 255);
