--- a/anemone_coffee/src/components/Sections.scss
+++ b/anemone_coffee/src/components/Sections.scss
@@ -38,7 +38,7 @@
 
     button {
       color: black;
-      border: 1px solid black;
+      border: 1px solid rgba(0, 0, 0, 0.35);
       margin-bottom:30px;
     }
 
