--- a/anemone_coffee/src/components/header/NavBar.scss
+++ b/anemone_coffee/src/components/header/NavBar.scss
@@ -38,8 +38,16 @@ nav {
       padding: 10px 20px;
   
       .reservation-btn {
-        color:black;
+        color:white;
         padding:10px;
+        border:1px solid white;
+        background-color: transparent;
+        border-radius: 0px;
+        font-weight: bold;
+
+        &:hover {
+          background-color: rgba(255, 255, 255, 0.264);
+        }
       }
       .navbar_logo {
         width: 80px; /* Taille du logo */
@@ -113,7 +121,10 @@ nav {
             text-align: center;
             opacity: 0; /* Invisible avant l'animation */
             transform: translateY(20px); /* Légèrement en bas */
-            animation: fadeInSlide 0.5s ease forwards; /* Animation personnalisée */
+            animation: fadeInSlide 0.5s ease forwards; 
+            text-transform: uppercase;
+            font-weight: 600;/* Animation personnalisée */
+            
             
           /* Délais progressifs pour chaque élément */
           &:nth-child(1) {
@@ -190,16 +201,16 @@ nav {
 
           .dropdown-menu {
             position: absolute;
-            background: white;
-            border: 1px solid #ccc;
-            border-radius: 10px;
+            background-color: rgba(255, 255, 255, 0.264);
             list-style: none;
-            padding: 10px;
-            min-width: 200px;
+            min-width: 190px;
             box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.2);
             display: flex;
             flex-direction: column;
             gap: 5px;
+            border-radius: 0px;;
+            border:0px;
+            padding:0px;
 
             a {
                 color:black;
