--- a/anemone_coffee/src/index.css
+++ b/anemone_coffee/src/index.css
@@ -22,7 +22,6 @@ li {
 }
 
 button {
-  border-radius: 8px;
   border: 2px solid transparent;
   padding: 0.6em 1.2em;
   font-size: 1em;
@@ -34,7 +33,9 @@ button {
   transition: border-color 0.25s;
 }
 button:hover {
-  border-color: #552900;
+  background-color: #562b0530;
+  font-weight:600;
+  border:1px solid #562b056e;
 }
 button:focus,
 button:focus-visible {
