add horaire and change images

--- a/anemone_coffee/src/components/footer/footer.scss
+++ b/anemone_coffee/src/components/footer/footer.scss
@@ -18,7 +18,8 @@ iframe {
 
     .footer_adress,
     .footer_contact,
-    .footer_propos {
+    .footer_propos,
+    .footer_horaires {
         margin-bottom: 30px; 
         text-align: left;
 
@@ -49,7 +50,8 @@ iframe {
         .footer_img,
         .footer_adress,
         .footer_contact,
-        .footer_propos {
+        .footer_propos,
+        .footer_horaires {
             margin-bottom: 0;
             margin-left: 20px; 
         }
