--- a/anemone_coffee/src/components/CarteBrunch.scss
+++ b/anemone_coffee/src/components/CarteBrunch.scss
@@ -174,7 +174,7 @@
         .formule_lunch {
             border: 2px solid black;
             width:40%;
-            padding:0;
+            padding:10px;
             margin:auto;
             margin-top:20px;
         }
